# GrapheneMessaging

./: .gitmodules  Android.bp  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle.kts  proguard.flags  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
gradle/: verification-metadata.xml
res/layout/: mms_config_debug_fragment.xml
res/menu/: archived_conversation_list_menu.xml  conversation_list_fragment_menu.xml  conversation_menu.xml  photo_view_menu.xml  settings_menu.xml
res/values/: attrs.xml  colors.xml  constants.xml  dimens.xml  strings.xml  styles.xml
res/values-ldrtl/: styles.xml
res/values-v17/: styles.xml
res/xml/: apn_editor.xml  apn_settings.xml  backup_rules.xml  preferences_application.xml  preferences_per_subscription.xml
src/androidx/appcompat/mms/: MmsManager.java  MmsService.java  Utils.java
src/com/android/messaging/: BugleApplication.java  FactoryImpl.java
src/com/android/messaging/datamodel/: BugleDatabaseOperations.java  BugleNotifications.java  DataModelImpl.java  DatabaseHelper.java  FrequentContactsCursorQueryData.java  MediaScratchFileProvider.java  MessageNotificationState.java  MessagingContentProvider.java  MmsFileProvider.java  NoConfirmationSmsSendService.java  ParticipantRefresh.java  SharedMemoryImageProvider.kt  SyncManager.java
src/com/android/messaging/datamodel/action/: ActionServiceImpl.java  DeleteConversationAction.java  InsertNewMessageAction.java  MarkAsReadAction.java  MarkAsSeenAction.java  ProcessDownloadedMmsAction.java  ProcessPendingMessagesAction.java  ProcessSentMessageAction.java  ReceiveMmsMessageAction.java  ReceiveSmsMessageAction.java  RedownloadMmsAction.java  UpdateMessageNotificationAction.java
src/com/android/messaging/datamodel/data/: ConversationData.java  ConversationListItemData.java  ConversationMessageData.java  PeopleAndOptionsData.java  PeopleOptionsItemData.java  (+3 more)
src/com/android/messaging/receiver/: ConversationReadReceiver.kt  DefaultSmsSubscriptionChangeReceiver.java  MmsWapPushDeliverReceiver.java  NotificationReceiver.java  SmsDeliverReceiver.java  SmsReceiver.java
src/com/android/messaging/sms/: ApnsXmlProcessor.java  BugleApnSettingsLoader.java  BugleCarrierConfigValuesLoader.java  BugleUserAgentInfoLoader.java  DatabaseMessages.java  MmsConfig.java  MmsSender.java  MmsUtils.java  SmsSender.java  SmsStorageStatusManager.java
src/com/android/messaging/ui/: AsyncImageView.java  BlockedParticipantListItemView.java  BugleActionBarActivity.java  LineWrapLayout.java  PermissionCheckActivity.java  PlainTextEditText.java  SmsStorageLowWarningFragment.java  SnackBarManager.java  UIIntents.java  UIIntentsImpl.java  VCardDetailFragment.java  ViewPagerTabStrip.java  ViewPagerTabs.java
src/com/android/messaging/util/: AccessibilityUtil.java  BugleActivityUtil.java  BugleGservicesKeys.java  ConnectivityUtil.java  ContactUtil.java  DebugUtils.java  FileUtil.java  ImageUtils.java  MediaUtil.java  MediaUtilImpl.java  NotificationChannelUtil.kt  OsUtil.java  PhoneUtils.java  RingtoneUtil.java  Trace.java  UiUtils.java  UriUtil.java
src/com/android/messaging/widget/: BaseWidgetProvider.java  WidgetConversationListService.java  WidgetConversationService.java
(+39 files in other folders)
